--- a/_application/template/include/blog/category-menu.pug
+++ b/_application/template/include/blog/category-menu.pug
@@ -1,12 +1,13 @@
 .category-list-blog
+	.title-section Разделы
 	ul
-		li.d-flex.align-items-center.justify-content-center.active
+		li.d-flex.align-items-center.justify-content-end
 			a(href="#") Красота и здоровье
-		li.d-flex.align-items-center.justify-content-center 
+		li.d-flex.align-items-center.justify-content-end 
 			a(href="#") Уход и гигиена
-		li.d-flex.align-items-center.justify-content-center 
+		li.d-flex.align-items-center.justify-content-end.active 
 			a(href="#") Терапевтия
-		li.d-flex.align-items-center.justify-content-center 
-			a(href="#") Ортодонтическое<br>лечение
-		li.d-flex.align-items-center.justify-content-center 
+		li.d-flex.align-items-center.justify-content-end 
+			a(href="#") Ортодонтическое лечение
+		li.d-flex.align-items-center.justify-content-end 
 			a(href="#") Брекет системы
