--- a/_application/template/include/blog/top-line.pug
+++ b/_application/template/include/blog/top-line.pug
@@ -2,14 +2,14 @@
 	.row
 		.col-md-12
 			.pull-right.d-flex.align-items-center
-				.filters-case.pull-left
-					.current Сортировка
-						i.arrow-list
-						ul.list-group.filters-list
-							li.list-group-item
-								a По дате
-							li.list-group-item
-								a По названию
+				//- .filters-case.pull-left
+				//- 	.current Сортировка
+				//- 		i.arrow-list
+				//- 		ul.list-group.filters-list
+				//- 			li.list-group-item
+				//- 				a По дате
+				//- 			li.list-group-item
+				//- 				a По названию
 				
 				// .open
 				.search-case.pull-left
