--- a/_application/template/include/common/header.pug
+++ b/_application/template/include/common/header.pug
@@ -10,6 +10,7 @@ header
 		.container
 			a.navbar-brand(href="../build/index.html")
 				img(src="images/ortodonts_logo.png", alt="ortodonts.ru")
+				img.scroll(src="images/ortodonts_logo_scroll.png", alt="ortodonts.ru")
 
 			.collapse.navbar-collapse.flex-row-reverse#HSN
 				ul.nav.navbar-nav
