--- a/_application/scss/style/blog/blog.scss
+++ b/_application/scss/style/blog/blog.scss
@@ -1,20 +1,30 @@
 /* BLOG PAGE */
 .blog-container{
-	background: #f7f9ff;
-	padding: 40px 0;
+	background: #f7f7f7;
+	padding: 0;
 	min-height: 100%;
 	
 	.column-left {
-		width: 280px;
+		width: 380px;
 		float: left;
+		padding-right: 0px;
+	    padding-left: 80px;
+	    position: relative;
 	}
 	.column-right {
-		width: calc(100% - 300px);
+		width: calc(100% - 380px);
 		float: right;
+		padding-left: 0px;
 	}
 
 	.wrapper-columns {
-		padding-top: 40px;
+		// padding-top: 40px;
+	}
+
+	.white-wrapper {
+		background: $white;
+		padding: 40px;
+		padding-top: 50px;
 	}
 }
 
