--- a/_application/scss/style/blog/category-menu.scss
+++ b/_application/scss/style/blog/category-menu.scss
@@ -1,8 +1,16 @@
 .category-list-blog {
-	border: 1px solid #212431;
-	@include border-radius(10px);
-	padding: 0px 14px;
 	margin-bottom: 40px;
+	position: absolute;
+	top: 0;
+
+	.title-section {
+		text-align: right;
+		font-family: 'UbuntuBold';
+		font-size: 26px;
+		padding: 40px 40px 20px;
+		color: rgba(0,0,0,0.87);
+		text-decoration: none;
+	}
 	
 	ul {
 		padding: 0px;
@@ -11,29 +19,34 @@
 		
 		li {
 			text-align: center;
-			height: 60px;
-			border-bottom: 1px solid #b8b9b9;
+		    padding: 7px 40px;
+		    @include border-radius(4px 0 0 4px);
 					
 			&:last-child {
 				border-bottom: none;
 			}
 
 			a {
-				font-size: 18px;
-				font-family: 'UbuntuMedium';
+				font-size: 14px;
+				font-family: 'UbuntuBold';
 				text-decoration: none;
-				color: #212431;
 			    line-height: 20px;
 			    @include transition(all 0.2s);
-				    
+			    text-transform: uppercase;
+			    color: rgba(0,0,0,0.7);
+
 				&:hover,
 				&.active {
-					color: #4479e0;
+					color: $blue;
 				}
 			}
 
-			&.active a {
-				color: #4479e0;
+			&.active {
+				background: $blue;
+
+				a {
+					color: $white;
+				}
 			}
 		}
 	}
