--- a/_application/scss/style/header.scss
+++ b/_application/scss/style/header.scss
@@ -1,8 +1,12 @@
 header {
+    background: rgba(255,255,255,0.99);
 	@include box-shadow(0px 0px 5px 0px rgba(0,0,0,0.75));
-    z-index: 1;
+    z-index: 10;
     position: relative;
-
+ //    position: fixed;
+ //    left: 0;
+ //    right: 0;
+	// top: 0;
 
     .navbar {
 		.navbar-toggler-right {
@@ -35,6 +39,9 @@ header {
 			    margin-top: 10px;
 				width: 150px;
     		}
+		}
+		> img.scroll {
+			display: none;
 		}
     }
 
@@ -92,6 +99,18 @@ header {
 						padding-bottom: 2px;
 					}
 				}
+			}
+		}
+	}
+
+	&.scroll {
+		a.navbar-brand { 
+			> img {
+				display: none;
+			}
+
+			> img.scroll {
+				display: block;
 			}
 		}
 	}
