--- a/_application/template/include/services/menu-category.pug
+++ b/_application/template/include/services/menu-category.pug
@@ -2,16 +2,17 @@
 	.container
 		.row
 			.d-flex.justify-content-around
-				ul.list-inline.category-menu-services
-					li.active
-						a(href="#").d-flex.align-items-center.justify-content-center
-							span Ортодонтия
-					li
-						a(href="#").d-flex.align-items-center.justify-content-center
-							span Терапия
-					li
-						a(href="#").d-flex.align-items-center.justify-content-center
-							span Эстетическая стоматология
-					li
-						a(href="#").d-flex.align-items-center.justify-content-center
-							span Обучение гигиене полости рта
+				.container-fluid
+					ul.list-inline.category-menu-services
+						li.active
+							a(href="#").d-flex.align-items-center.justify-content-center
+								span Ортодонтия
+						li
+							a(href="#").d-flex.align-items-center.justify-content-center
+								span Терапия
+						li
+							a(href="#").d-flex.align-items-center.justify-content-center
+								span Эстетическая стоматология
+						li
+							a(href="#").d-flex.align-items-center.justify-content-center
+								span Обучение гигиене полости рта
