--- a/_application/scss/main.scss
+++ b/_application/scss/main.scss
@@ -32,3 +32,4 @@ dev. Pavel Ugrynovych (Lauer - lauer.com.ua)
 @import "style/services/services";
 @import "style/portfolio/portfolio";
 @import "style/contacts/contacts";
+@import "style/faq/faq";
