--- a/_application/scss/style/header.scss
+++ b/_application/scss/style/header.scss
@@ -1,6 +1,6 @@
 header {
     background: rgba(255,255,255,0.99);
-	@include box-shadow(0px 0px 5px 0px rgba(0,0,0,0.75));
+	@include box-shadow(0 0px 8px 0px rgba(0,0,0,.48));
     z-index: 10;
     position: relative;
  //    position: fixed;
