--- a/_application/scss/style/themes.scss
+++ b/_application/scss/style/themes.scss
@@ -78,7 +78,7 @@ h1, h2 {
 }
 
 .description-mini {
-    color: $blue;
+    color: rgba(0,0,0,.7);
     margin: 20px 0;
     font-size: 16px;
     font-family: "UbuntuBold";
