--- a/_application/template/include/index/about-section.pug
+++ b/_application/template/include/index/about-section.pug
@@ -6,32 +6,32 @@ section.about-section-index.section-p-80(data-js-init="indexPage")
 				h1 Надежда Николаева
 				span.description-mini Врач-ортодонт
 				
-				img.doctor-photo-mobile(src="images/vrach-ortodont_Nikolaeva_Nadezhda.jpg", alt="")
+				img.doctor-photo-mobile(src="images/vrach-ortodont_Nikolaeva_Nadezhda_ortodonts.ru.jpg", alt="ortodonts.ru")
 				
 				.content-about.align-content-center.flex-wrap.d-flex
 					p.
-						Мой подход к лечению - коррекция положения и размеров зубных рядов, нормализация прикуса и создание оптимального динамического соотношения приводящих и отводящих мышц. Конечный результат - улучшение эстетики лица, красивая улыбка и правильный прикус.
+						Мой подход к лечению - коррекция положения и размеров зубных рядов, нормализация прикуса и создание оптимального динамического соотношения приводящих и отводящих мышц. Конечный результат - улучшение эстетики лица, красивая улыбка и правильный прикус. Занимаюсь исправлением прикуса различной степени сложности. Владею разнообразными методами диагностики и современными техниками лечения с помощью брекет-систем ведущих мировых производителей, исправление прикуса без брекетов. Микроимпланты. Лечение съёмными аппаратами. Решение проблем с височно-нижнечелюстным суставом.Брекеты Дэймон (Damon). Цифровая ортодонтия Инсигния (Insignia).
 
-					.about-list-advantages
-						.item-about-advantages.d-flex.align-items-center.wow.fadeInLeft
-							.icon-item-about-advantages.diploma
-							.text-item-about-advantages.
-								Дипломированный и сертифицированный специалист
-							.clearfix
+					//- .about-list-advantages
+					//- 	.item-about-advantages.d-flex.align-items-center.wow.fadeInLeft
+					//- 		.icon-item-about-advantages.diploma
+					//- 		.text-item-about-advantages.
+					//- 			Дипломированный и сертифицированный специалист
+					//- 		.clearfix
 
-						.item-about-advantages.d-flex.align-items-center.wow.fadeInLeft
-							.icon-item-about-advantages.practice
-							.text-item-about-advantages.
-								Десять лет непрерывной практики в ортодонтии
-							.clearfix
+					//- 	.item-about-advantages.d-flex.align-items-center.wow.fadeInLeft
+					//- 		.icon-item-about-advantages.practice
+					//- 		.text-item-about-advantages.
+					//- 			Десять лет непрерывной практики в ортодонтии
+					//- 		.clearfix
 
-						.item-about-advantages.d-flex.align-items-center.wow.fadeInLeft
-							.icon-item-about-advantages.certificate
-							.text-item-about-advantages.
-								Постоянный участник семинаров и конференций
-							.clearfix
+					//- 	.item-about-advantages.d-flex.align-items-center.wow.fadeInLeft
+					//- 		.icon-item-about-advantages.certificate
+					//- 		.text-item-about-advantages.
+					//- 			Постоянный участник семинаров и конференций
+					//- 		.clearfix
 
 			.col-md-6
-				img.doctor-photo(src="images/vrach-ortodont_Nikolaeva_Nadezhda.jpg", alt="")
+				img.doctor-photo(src="images/vrach-ortodont_Nikolaeva_Nadezhda_ortodonts.ru.jpg", alt="ortodonts.ru")
 
 // ABOUT SECTION* 
