--- a/_application/template/include/about/ortodont_about_text.pug
+++ b/_application/template/include/about/ortodont_about_text.pug
@@ -3,12 +3,14 @@ section.ortodont_about_text.section-p-80(data-js-init="AboutPage")
 	.container
 		.row
 			.col-md-12
-				h2.text-center Врач-ортодонт
+				h2.text-center Надежда Николаева
 
-				h3 Lorem ipsum dolor sit
+				h3 
 				p.
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est 
+					Здравствуйте! Я практикующий врач-ортодонт. Своей работой делаю людей здоровыми и красивыми. Помогаю избавится от комплексов и стать уверенными в себе. Идеальные зубы с рождения встречаются у 3% всего населения земного шара, а у остальных идеальная ослепительная улыбка — это работа профессионального врача-ортодонта.<br><br>
 
-				h4 Lorem ipsum dolor sit
-				p.
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est 
+					Я регулярно посещаю семинары и конференции по ортодонтии, повышая свой профессиональный уровень. В работе практикую современные технологии, для того, чтобы диагностика и лечение доставили минимум дискомфорта моим пациентам.<br><br>
+
+					Несмотря на то, что многих волнует непосредственно эстетическая сторона улыбки, нужно всегда помнить, что здоровье зубов — это очень важно для комфортной и счастливой жизни!<br><br>
+
+					Вам нужна качественная чистка на современном оборудовании, лечение или установка брекет-системы? Я готова Вам в этом помочь, сделав Ваши зубы ровными, ослепительно белоснежными и здоровыми. 
