--- a/_application/template/include/common/contactForm.pug
+++ b/_application/template/include/common/contactForm.pug
@@ -7,25 +7,25 @@ section.section-p-80.feedback-section
 
 		form(action="#")#feedback
 			.row
-				.col-md-6
+				.col-md-6.col-sm-6
 					.input-group
 						input.form-control(name="first_name", placeholder="Имя", type="text")
-				.col-md-6
+				.col-md-6.col-sm-6
 					.input-group
 						input.form-control(name="last_name", placeholder="Фамилия", type="text")
 			.row
-				.col-md-6
+				.col-md-6.col-sm-6
 					.input-group
 						input.form-control(name="mail", placeholder="E-mail", type="mail")
-				.col-md-6
+				.col-md-6.col-sm-6
 					.input-group
 						input.form-control(name="tel", placeholder="Телефон", type="tel")
 			.row
-				.col-md-12
+				.col-12
 					.input-group
 						textarea.form-control(name="message", placeholder="Ваш комментарий")
 			.row
-				.col-md-12
+				.col-12
 					.d-flex.justify-content-center
 						// class load 
 						button.btn.btn-primary.load(type="submit").hvr-grow-shadow
