--- a/_application/template/include/index/about-section.pug
+++ b/_application/template/include/index/about-section.pug
@@ -10,7 +10,10 @@ section.about-section-index.section-p-80(data-js-init="indexPage")
 				
 				.content-about.align-content-center.flex-wrap.d-flex
 					p.
-						Мой подход к лечению - коррекция положения и размеров зубных рядов, нормализация прикуса и создание оптимального динамического соотношения приводящих и отводящих мышц. Конечный результат - улучшение эстетики лица, красивая улыбка и правильный прикус. Занимаюсь исправлением прикуса различной степени сложности. Владею разнообразными методами диагностики и современными техниками лечения с помощью брекет-систем ведущих мировых производителей, исправление прикуса без брекетов. Микроимпланты. Лечение съёмными аппаратами. Решение проблем с височно-нижнечелюстным суставом.Брекеты Дэймон (Damon). Цифровая ортодонтия Инсигния (Insignia).
+						Для большинства людей такое понятие, как «ортодонтия» является неизвестным. Хотя для многих врач-ортодонт стал бы спасением. Для начала предлагаю разобрать это понятие.<br>
+						И так, ортодонтия (от греч. оrthos –прямой и odontos – зуб) фактически это процесс создания прямых зубов, если рассматривать это дословно.  А подходя с глобальной точки зрения это спасение для очень многих людей. Ведь встречают человека «по одежке», то есть по его внешнему виду, а красивая улыбка это 50% успеха.<br>
+						Вы стесняетесь улыбаться, по причине того, что у Вас диастема (щербинка) между зубками? Неправильный прикус? Другие дефекты? Для меня это не проблема, а любимая работа и желание помочь Вам быть красивыми! Абсолютно безболезненно, быстро и эстетично.
+
 
 					//- .about-list-advantages
 					//- 	.item-about-advantages.d-flex.align-items-center.wow.fadeInLeft
