--- a/_application/scss/style/blog/top-line.scss
+++ b/_application/scss/style/blog/top-line.scss
@@ -1,8 +1,76 @@
 .top-line {
-	// padding-top: 40px;
 	height: 40px;
 	border-bottom: 1px solid rgba(0,0,0,0.32);
 	margin-bottom: 30px;
+
+	&.scrollInit {
+	    background: white;
+	    width: 100vw;
+	    max-width: 100%;
+	    margin: 0;
+	    left: 0;
+	    padding: 0px 40px;
+	    height: 40px;
+
+	    &::after {
+		    content: "";
+		    border: 5px solid transparent;
+		    border-top: 5px solid rgba(0,0,0,.08);
+		    border-right: 5px solid rgba(0,0,0,.08);
+		    left: 0;
+	        top: 100%;
+		    position: absolute;
+		}
+
+	    &::before {
+		    content: "";
+		    border: 5px solid transparent;
+		    border-top: 5px solid rgba(0,0,0,.08);
+		    border-left: 5px solid rgba(0,0,0,.08);
+		    right: 0;
+		    position: absolute;
+	        top: 100%;
+		}
+
+		.filters-case {
+			.current {
+				.filters-list{
+					right: auto;
+					left: -10px;
+				}
+			}
+		}
+
+	}
+
+    @media (max-width: 991px) {
+	    position: absolute;
+		padding-top: 20px;
+		height: 60px;
+	    z-index: 2;
+	    background: white;
+	    max-width: calc(100% - 100px);
+	    top: 0;
+	    @include transition(top 0.4s);
+
+	    .pull-right.d-flex.align-items-center.justify-content-end {
+	    	width: 100%;
+	    	height: 38px;
+	    }
+
+		.form-control {
+		    padding: 14px 15px 6px;
+		}
+	}
+
+	@media (max-width: 767px) {
+	    width: calc(100% - 100px);
+
+	    .col-md-12 {
+			padding-left: 0px;
+	    }
+
+	}
 
 	.filters-case {
 		
@@ -10,13 +78,41 @@
 			font-size: 12px;
 			cursor: pointer;
 			position: relative;
-			
+			display: none;
+		    padding-right: 26px;
+
+			span {
+				max-width: 155px;
+				white-space: nowrap;
+				overflow: hidden;
+				text-overflow: ellipsis;
+				display: inline-block;
+
+			    @media (max-width: 480px) {
+					max-width: 135px;
+			    }
+			}
+
+		    @media (max-width: 991px) {
+		    	display: block;
+				top: -50%;
+				bottom: -50%;
+				height: 18px;
+				margin: auto;
+				position: absolute;
+				left: 10px;
+		    }
+		
 			.arrow-list {
-				margin-left: 15px;
 				width: 11px;
 				height: 7px;
 				display: inline-block;
 				background: url(../../images/icon/arrow_list.png) no-repeat left top;
+				position: absolute;
+				top: -50%;
+				bottom: -50%;
+				margin: auto;
+				margin-left: 15px;
 			}
 
 			.filters-list{
@@ -24,8 +120,9 @@
 				position: absolute;
 				top: calc(100% + 5px);
 				width: 150px;
-			    left: -15px;
+			    right: -10px;
    				z-index: 10;
+   				list-style: none;
 			
 				&:hover {
 					display: block;
@@ -34,7 +131,18 @@
 				.list-group-item {
 				    padding: 0.45rem 1rem;
 
+				    a {
+				    	color: rgba(0,0,0,.7);
+				    }
+
 					&:hover {
+						a {
+							color: $blue;
+							text-decoration: none;
+						}
+					}
+					
+					&.active {
 						background: $blue;
 						
 						a {
@@ -75,6 +183,10 @@
 	.search-case {
 		height: 100%;
 		margin-left: 40px;
+
+	    @media (max-width: 991px) {
+			margin-left: 0px;
+	    }
 		
 		.wrapper-hide {
 			width: 100%;
@@ -91,7 +203,7 @@
 				display: inline-block;
 				background: url(../../images/icon/search.png) no-repeat left top;
 			}
-			
+
 			&:hover {
 				color: $blue;
 				
@@ -106,7 +218,15 @@
 
 		&.open {
 			position: relative;
-			
+			    
+		    @media (max-width: 551px) {
+				width: 100%;
+				position: absolute;
+				left: 0;
+				height: 45px;
+				top: 0;
+		    }
+
 			.wrapper-hide {
 				display: none !important;
 			}
@@ -118,7 +238,11 @@
 				width: 100%;
 				font-size: 14px;
 				text-align: left;
-				padding-left: 43px;				
+				padding-left: 43px;	
+
+			    @media (max-width: 551px) {
+			    }
+
 			}
 			
 			&::before {
