--- a/_application/scss/style/footer.scss
+++ b/_application/scss/style/footer.scss
@@ -3,6 +3,8 @@ footer {
 	background: #212431;
 	padding: 30px 0;
 	@include box-shadow(0px 0px 5px 0px rgba(0,0,0,0.75));
+	position: relative;
+	z-index: 1;
 
 	@media (max-width: 440px) {
 		.col-4 {
