--- a/_application/scss/style/header.scss
+++ b/_application/scss/style/header.scss
@@ -3,10 +3,97 @@ header {
 	@include box-shadow(0 0px 8px 0px rgba(0,0,0,.48));
     z-index: 10;
     position: relative;
- //    position: fixed;
- //    left: 0;
- //    right: 0;
-	// top: 0;
+
+	@media (max-width: 991px) {
+	    position: fixed;
+	    left: 0;
+	    right: 0;
+		top: 0;
+	}
+
+	.mobile-footer-menu,
+	.shawl-mobile {
+		display: none;
+	}
+	
+	@media (max-width: 991px) {
+		.shawl-mobile {
+			width: 100%;
+			position: fixed;
+			top: 48px;
+			bottom: 0;
+			left: 0;
+			right: 0;
+			background: rgba(0,0,0,0);
+			@include transition(background 0.5s);
+			
+			&.open {
+				background: rgba(0,0,0,.8);
+				display: block;
+			}
+		}
+	}
+
+	#HSN {
+		width: 100%;
+		display: -webkit-box;
+		display: -webkit-flex;
+		display: -ms-flexbox;
+		display: flex;
+
+		@media (max-width: 991px) {
+			left: - 185px;
+		    display: block;
+			position: fixed;
+			background: #212431;
+			top: 48px;
+			bottom: 0;
+			width: 180px;
+			color: $white;
+			@include transition(left 0.4s);
+
+			&.open {
+				left: 0px;
+			}
+			
+			
+			.mobile-footer-menu {
+				display: block;
+
+				@media (max-height: 345px) {
+					display: none;
+				}
+
+				footer {
+					position: absolute;
+					bottom: 0;
+					box-shadow: none;
+					padding-bottom: 20px;
+					width: 100%;
+
+					.social {
+						margin: 0 12px 24px;
+
+						@media (max-height: 435px) {
+							display: none !important;
+						}
+						
+					}
+
+					.copyright-wrapper {
+
+						@media (max-height: 395px) {
+							display: none !important;
+						}
+
+						.copyright {
+							margin-top: 18px
+						}
+					}
+				}
+			}
+		}
+	}
 
     .navbar {
 		.navbar-toggler-right {
@@ -52,6 +139,10 @@ header {
 			padding-top: 29px;
 		}
 
+		@media (max-width: 991px) {
+		    padding-top: 15px;
+		}
+
 		li {
 			padding: 0 20px;
 
@@ -59,8 +150,9 @@ header {
 				padding-right: 0px;
 			}
 
-			@media (max-width: 992px) {
+			@media (max-width: 991px) {
 				text-align: center;
+				padding: 0px;
 			}
 
 			> a {
@@ -80,8 +172,16 @@ header {
 				}
 
 				@media (max-width: 991px) {
-					margin-bottom: 15px;
+					font-size: 16px;
+					margin: 6px 0px;
 					padding-bottom: 5px;
+					color: #fff;
+					font-weight: 500;
+					
+					@media (max-height: 490px) {
+						font-size: 14px;
+						margin: 2px 0;
+					}
 				}
 
 				&:hover {
@@ -97,6 +197,7 @@ header {
 
 					@media (max-width: 992px) {
 						padding-bottom: 2px;
+						border-bottom: none;
 					}
 				}
 			}
