--- a/_application/scss/style/index/advantages-section.scss
+++ b/_application/scss/style/index/advantages-section.scss
@@ -1,8 +1,23 @@
 // Advatages section index page
 section.advantages-section-index {
-	z-index: 1;
-	position: relative;
-	background: #f7f7f7;
+    z-index: 1;
+    position: relative;
+    background: url(../../images/bg/bg_advantages_index.jpg) no-repeat center;
+    height: 680px;
+
+    &::after {
+	    content: '';
+	    position: absolute;
+	    top: 0;
+	    bottom: 0;
+	    left: 0;
+	    right: 0;
+	    background: rgba(3, 21, 56, 0.76);
+	}
+
+	> .container {
+		z-index: 1;
+	}
 
 	@media (max-width: 290px) {
 		.col-6 {
