--- a/_application/template/include/common/header.pug
+++ b/_application/template/include/common/header.pug
@@ -4,15 +4,16 @@
 header
 	nav.navbar.navbar-toggleable-md(role="navigation")
 
-		button.navbar-toggler.navbar-toggler-right(type="button", data-toggle="collapse", data-target="#HSN", aria-controls="HSN", aria-expanded="false", aria-label="Toggle navigation")
+		button.navbar-toggler.navbar-toggler-right(type="button", onclick="mobile.menu()")
 			i.fa.fa-bars(aria-hidden="true")
 
 		.container
 			a.navbar-brand(href="../build/index.html")
 				img(src="images/ortodonts_logo.png", alt="ortodonts.ru")
 				img.scroll(src="images/ortodonts_logo_scroll.png", alt="ortodonts.ru")
-
-			.collapse.navbar-collapse.flex-row-reverse#HSN
+			
+			.shawl-mobile
+			.flex-row-reverse#HSN
 				ul.nav.navbar-nav
 					- menu_list.forEach(function(index){
 
@@ -25,5 +26,31 @@ header
 						- }
 
 					- });
+
+				.mobile-footer-menu
+					footer
+						.container
+							.row
+								.col-12.text-center.d-flex.flex-nowrap.justify-content-center
+									.d-flex.flex-nowrap.justify-content-center
+										a.social.d-flex.justify-content-center.align-items-center.faa-parent.animated-hover(href="#").vk
+											i.fa.fa-vk.faa-pulse
+										a.social.d-flex.justify-content-center.align-items-center.faa-parent.animated-hover(href="#")
+											i.fa.fa-twitter.faa-tada
+										a.social.d-flex.justify-content-center.align-items-center.faa-parent.animated-hover(href="#")
+											i.fa.fa-instagram.faa-pulse
+
+								.col-12.contacts-footer.d-flex.align-items-center.flex-column
+									div
+										a(href="tel:+74959702078", target="_blank") +7 (495) 970-20-78
+									div
+										a(href="tel:+74959702078", target="_blank") +7 (985) 970-20-78
+								
+								.col-md-4.col-sm-4.col-4.d-flex.copyright-wrapper.mobile
+									p.copyright
+										|Разработано в &nbsp
+										a(href="https://lauer.agency/", target="_blank") Lauer
+										br
+										|2017©Ortodonts.ru
 
 // *HEADER* 
