--- a/_application/template/include/contacts/wrapper.pug
+++ b/_application/template/include/contacts/wrapper.pug
@@ -1,22 +1,28 @@
 .contacts-wrapper(data-js-init="ContactsPage")
 	.container
 		.row
-			.col-4.d-flex.justify-content-center.align-items-center
+			.col-12.col-md-4.col-sm-6.d-flex.justify-content-center.align-items-center
 				ul.tel-list
 					li
 						a(href="tel:+79859702078") +7(985)970-20-78
 					li
 						a(href="tel:+74959702078") +7(495)970-20-78
 		
-			.col-4.d-flex.justify-content-center.align-items-center
+			.col-md-4.d-flex.justify-content-center.align-items-center.mobi-hide-info
 				.address-information.
 					г.Москва. м.Павелецкая,<br>
 					ул.Кожевническая д.14 корп.1<br> 
 					стр.2 клиника "Бьюти Смайл"
 
-			.col-4.d-flex.justify-content-center.align-items-center
+			.col-12.col-md-4.col-sm-6.d-flex.justify-content-center.align-items-center
 				.mail-information
 					a(href="mailto:info@ortodonts.ru") info@ortodonts.ru
+
+			.col-12.d-flex.justify-content-center.align-items-center.mobi-visible-info
+				.address-information.
+					г.Москва. м.Павелецкая,
+					ул.Кожевническая д.14 корп.1
+					стр.2 клиника "Бьюти Смайл"
 //- .container
 //- 	.row
 #map
