--- a/_application/scss/include/_mixin.scss
+++ b/_application/scss/include/_mixin.scss
@@ -86,3 +86,12 @@
     clear: both;
   }
 }
+
+@mixin clamp($a, $b) {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: $a;
+    -webkit-box-orient: vertical;
+    max-height: $b;
+}
