--- a/_application/template/include/portfolio/categories.pug
+++ b/_application/template/include/portfolio/categories.pug
@@ -3,158 +3,67 @@
 	// CATEGORY ITEM
 	section.portfolio-category#portfolio_ortodont
 		.container
-			.row
-				.col-md-12.text-center
-					h2.title-category Ортодонтия
 
 			.row.wrap
-				
 				// ITEM
-				.col-4.text-center
+				.col-3.text-center
 					span.item-portfolio
-						img.lazy#portfolio_ortodont_1(data-original="images/portfolio/1_mini.jpg", src="", alt="Ортодонтическое лечение брекет-системой DamonQ.", data-big-src="images/portfolio/1.jpg")
-
-				// ITEM
-				.col-4.text-center
-					span.item-portfolio
-						img.lazy#portfolio_ortodont_2(data-original="images/portfolio/2_mini.jpg", src="", alt="", data-big-src="images/portfolio/2.jpg")
+						img.lazy#portfolio_ortodont_1(data-original="images/portfolio/1_mini.jpg", src="images/loading.gif", alt="Ортодонтическое лечение брекет-системой DamonQ.", data-big-src="images/portfolio/1.jpg")
 
 				// ITEM
-				.col-4.text-center
+				.col-3.text-center
 					span.item-portfolio
-						img.lazy#portfolio_ortodont_3(data-original="images/portfolio/3_mini.jpg", src="", alt="", data-big-src="images/portfolio/3.jpg")
+						img.lazy#portfolio_ortodont_2(data-original="images/portfolio/2_mini.jpg", src="images/loading.gif", alt="", data-big-src="images/portfolio/2.jpg")
 
 				// ITEM
-				.col-4.text-center
+				.col-3.text-center
 					span.item-portfolio
-						img.lazy#portfolio_ortodont_4(data-original="images/portfolio/1_mini.jpg", src="", alt="Ортодонтическое лечение брекет-системой DamonQ.", data-big-src="images/portfolio/1.jpg")
+						img.lazy#portfolio_ortodont_3(data-original="images/portfolio/3_mini.jpg", src="images/loading.gif", alt="", data-big-src="images/portfolio/3.jpg")
 
 				// ITEM
-				.col-4.text-center
+				.col-3.text-center
 					span.item-portfolio
-						img.lazy#portfolio_ortodont_5(data-original="images/portfolio/2_mini.jpg", src="", alt="", data-big-src="images/portfolio/2.jpg")
+						img.lazy#portfolio_ortodont_4(data-original="images/portfolio/1_mini.jpg", src="images/loading.gif", alt="Ортодонтическое лечение брекет-системой DamonQ.", data-big-src="images/portfolio/1.jpg")
 
 				// ITEM
-				.col-4.text-center
+				.col-3.text-center
 					span.item-portfolio
-						img.lazy#portfolio_ortodont_6(data-original="images/portfolio/3_mini.jpg", src="", alt="", data-big-src="images/portfolio/3.jpg")
-
-	// CATEGORY ITEM
-	section.portfolio-category.grey.hide
-		.container
-			.row
-				.col-md-12.text-center
-					h2.title-category Терапия
-
-			.row.wrap
-				
-				// ITEM
-				.col-4.text-center
-					span.item-portfolio
-						img.lazy#portfolio_2_1(data-original="images/portfolio/1_mini.jpg", src="", alt="Ортодонтическое лечение брекет-системой DamonQ.", data-big-src="images/portfolio/1.jpg")
+						img.lazy#portfolio_ortodont_5(data-original="images/portfolio/2_mini.jpg", src="images/loading.gif", alt="", data-big-src="images/portfolio/2.jpg")
 
 				// ITEM
-				.col-4.text-center
+				.col-3.text-center
 					span.item-portfolio
-						img.lazy#portfolio_2_2(data-original="images/portfolio/2_mini.jpg", src="", alt="", data-big-src="images/portfolio/2.jpg")
+						img.lazy#portfolio_ortodont_6(data-original="images/portfolio/3_mini.jpg", src="images/loading.gif", alt="", data-big-src="images/portfolio/3.jpg")
 
 				// ITEM
-				.col-4.text-center
+				.col-3.text-center
 					span.item-portfolio
-						img.lazy#portfolio_2_3(data-original="images/portfolio/3_mini.jpg", src="", alt="", data-big-src="images/portfolio/3.jpg")
+						img.lazy#portfolio_ortodont_5(data-original="images/portfolio/2_mini.jpg", src="images/loading.gif", alt="", data-big-src="images/portfolio/2.jpg")
 
 				// ITEM
-				.col-4.text-center
+				.col-3.text-center
 					span.item-portfolio
-						img.lazy#portfolio_2_4(data-original="images/portfolio/1_mini.jpg", src="", alt="Ортодонтическое лечение брекет-системой DamonQ.", data-big-src="images/portfolio/1.jpg")
+						img.lazy#portfolio_ortodont_6(data-original="images/portfolio/3_mini.jpg", src="images/loading.gif", alt="", data-big-src="images/portfolio/3.jpg")
+							
+				// ITEM
+				.col-3.text-center
+					span.item-portfolio
+						img.lazy#portfolio_ortodont_5(data-original="images/portfolio/2_mini.jpg", src="images/loading.gif", alt="", data-big-src="images/portfolio/2.jpg")
 
 				// ITEM
-				.col-4.text-center
+				.col-3.text-center
 					span.item-portfolio
-						img.lazy#portfolio_2_5(data-original="images/portfolio/2_mini.jpg", src="", alt="", data-big-src="images/portfolio/2.jpg")
+						img.lazy#portfolio_ortodont_6(data-original="images/portfolio/3_mini.jpg", src="images/loading.gif", alt="", data-big-src="images/portfolio/3.jpg")
 
 				// ITEM
-				.col-4.text-center
+				.col-3.text-center
 					span.item-portfolio
-						img.lazy#portfolio_2_6(data-original="images/portfolio/3_mini.jpg", src="", alt="", data-big-src="images/portfolio/3.jpg")
-
-	// CATEGORY ITEM
-	section.portfolio-category.grey.hide
-		.container
-			.row
-				.col-md-12.text-center
-					h2.title-category Эстетическая стоматология
-
-			.row.wrap
-				
-				// ITEM
-				.col-4.text-center
-					span.item-portfolio
-						img.lazy#portfolio_3_1(data-original="images/portfolio/1_mini.jpg", src="", alt="Ортодонтическое лечение брекет-системой DamonQ.", data-big-src="images/portfolio/1.jpg")
+						img.lazy#portfolio_ortodont_5(data-original="images/portfolio/2_mini.jpg", src="images/loading.gif", alt="", data-big-src="images/portfolio/2.jpg")
 
 				// ITEM
-				.col-4.text-center
+				.col-3.text-center
 					span.item-portfolio
-						img.lazy#portfolio_3_2(data-original="images/portfolio/2_mini.jpg", src="", alt="", data-big-src="images/portfolio/2.jpg")
-
-				// ITEM
-				.col-4.text-center
-					span.item-portfolio
-						img.lazy#portfolio_3_3(data-original="images/portfolio/3_mini.jpg", src="", alt="", data-big-src="images/portfolio/3.jpg")
-
-				// ITEM
-				.col-4.text-center
-					span.item-portfolio
-						img.lazy#portfolio_3_4(data-original="images/portfolio/1_mini.jpg", src="", alt="Ортодонтическое лечение брекет-системой DamonQ.", data-big-src="images/portfolio/1.jpg")
-
-				// ITEM
-				.col-4.text-center
-					span.item-portfolio
-						img.lazy#portfolio_3_5(data-original="images/portfolio/2_mini.jpg", src="", alt="", data-big-src="images/portfolio/2.jpg")
-
-				// ITEM
-				.col-4.text-center
-					span.item-portfolio
-						img.lazy#portfolio_3_6(data-original="images/portfolio/3_mini.jpg", src="", alt="", data-big-src="images/portfolio/3.jpg")
-
-	// CATEGORY ITEM
-	section.portfolio-category.grey.hide
-		.container
-			.row
-				.col-md-12.text-center
-					h2.title-category Обучение гигиене
-
-			.row.wrap
-				
-				// ITEM
-				.col-4.text-center
-					span.item-portfolio
-						img.lazy#portfolio_19(data-original="images/portfolio/1_mini.jpg", src="", alt="Ортодонтическое лечение брекет-системой DamonQ.", data-big-src="images/portfolio/1.jpg")
-
-				// ITEM
-				.col-4.text-center
-					span.item-portfolio
-						img.lazy#portfolio_20(data-original="images/portfolio/2_mini.jpg", src="", alt="", data-big-src="images/portfolio/2.jpg")
-
-				// ITEM
-				.col-4.text-center
-					span.item-portfolio
-						img.lazy#portfolio_21(data-original="images/portfolio/3_mini.jpg", src="", alt="", data-big-src="images/portfolio/3.jpg")
-
-				// ITEM
-				.col-4.text-center
-					span.item-portfolio
-						img.lazy#portfolio_22(data-original="images/portfolio/1_mini.jpg", src="", alt="Ортодонтическое лечение брекет-системой DamonQ.", data-big-src="images/portfolio/1.jpg")
-
-				// ITEM
-				.col-4.text-center
-					span.item-portfolio
-						img.lazy#portfolio_23(data-original="images/portfolio/2_mini.jpg", src="", alt="", data-big-src="images/portfolio/2.jpg")
-
-				// ITEM
-				.col-4.text-center
-					span.item-portfolio
-						img.lazy#portfolio_24(data-original="images/portfolio/3_mini.jpg", src="", alt="", data-big-src="images/portfolio/3.jpg")
+						img.lazy#portfolio_ortodont_6(data-original="images/portfolio/3_mini.jpg", src="images/loading.gif", alt="", data-big-src="images/portfolio/3.jpg")
 
 
 include popup
