--- a/_application/template/include/services/item-list.pug
+++ b/_application/template/include/services/item-list.pug
@@ -6,7 +6,7 @@
 				.row
 					.col-6
 						.image-item-wrapper
-							img.lazy(data-original="images/services/items/1.jpg", src="", alt="1")
+							img.lazy(data-original="images/services/items/1.jpg", src="images/loading.gif", alt="1")
 					.col-md-6.d-flex.justify-content-center.align-items-center
 						.text-item-wrapper
 							div
@@ -26,15 +26,13 @@
 									Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 					.col-6
 						.image-item-wrapper
-							img.lazy(data-original="images/services/items/2.jpg", src="", alt="2")
+							img.lazy(data-original="images/services/items/2.jpg", src="images/loading.gif", alt="2")
 
-		// ITEM
-		section.item-service
-			.container
+				// ITEM
 				.row
 					.col-6
 						.image-item-wrapper
-							img.lazy(data-original="images/services/items/3.jpg", src="", alt="3")
+							img.lazy(data-original="images/services/items/3.jpg", src="images/loading.gif", alt="3")
 					.col-md-6.d-flex.justify-content-center.align-items-center
 						.text-item-wrapper
 							div
@@ -42,9 +40,7 @@
 								p.description-item.
 									Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 
-		// ITEM
-		section.item-service
-			.container
+				// ITEM
 				.row
 					.col-md-6.d-flex.justify-content-center.align-items-center
 						.text-item-wrapper
@@ -54,15 +50,13 @@
 									Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 					.col-6
 						.image-item-wrapper
-							img.lazy(data-original="images/services/items/4.jpg", src="", alt="4")
+							img.lazy(data-original="images/services/items/4.jpg", src="images/loading.gif", alt="4")
 
-		// ITEM
-		section.item-service
-			.container
+				// ITEM
 				.row
 					.col-6
 						.image-item-wrapper
-							img.lazy(data-original="images/services/items/5.jpg", src="", alt="5")
+							img.lazy(data-original="images/services/items/5.jpg", src="images/loading.gif", alt="5")
 					.col-md-6.d-flex.justify-content-center.align-items-center
 						.text-item-wrapper
 							div
@@ -70,9 +64,7 @@
 								p.description-item.
 									Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 
-		// ITEM
-		section.item-service
-			.container
+				// ITEM
 				.row
 					.col-md-6.d-flex.justify-content-center.align-items-center
 						.text-item-wrapper
@@ -82,15 +74,13 @@
 									Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 					.col-6
 						.image-item-wrapper
-							img.lazy(data-original="images/services/items/6.jpg", src="", alt="6")
+							img.lazy(data-original="images/services/items/6.jpg", src="images/loading.gif", alt="6")
 
-		// ITEM
-		section.item-service
-			.container
+				// ITEM
 				.row
 					.col-6
 						.image-item-wrapper
-							img.lazy(data-original="images/services/items/7.jpg", src="", alt="7")
+							img.lazy(data-original="images/services/items/7.jpg", src="images/loading.gif", alt="7")
 					.col-md-6.d-flex.justify-content-center.align-items-center
 						.text-item-wrapper
 							div
