--- a/_application/template/portfolio.pug
+++ b/_application/template/portfolio.pug
@@ -10,6 +10,7 @@ html(lang='ru')
 		
 
 		include include/common/topSection
+		include include/portfolio/menu-category
 		include include/portfolio/categories
 
 		include include/index/faq
