--- a/_application/scss/style/blog/item-list.scss
+++ b/_application/scss/style/blog/item-list.scss
@@ -50,12 +50,7 @@
 				color: rgba(0,0,0,0.7);
 				padding-bottom: 5px;
 				line-height: 23px;
-				overflow: hidden;
-				text-overflow: ellipsis;
-				display: -webkit-box;
-				-webkit-line-clamp: 2;
-				-webkit-box-orient: vertical;
-				max-height: 53px;
+				@include clamp(2, 53px);
 			}
 
 			.item-text {
@@ -66,12 +61,7 @@
 			    margin-bottom: 15px;
 			    letter-spacing: 0.25px;
 				color: rgba(0,0,0,0.54);
-				overflow: hidden;
-				text-overflow: ellipsis;
-				display: -webkit-box;
-				-webkit-line-clamp: 6;
-				-webkit-box-orient: vertical;
-				max-height: 125px;
+				@include clamp(6, 125px);
 			}
 
 			.item-public-date {
