--- a/_application/scss/main.scss
+++ b/_application/scss/main.scss
@@ -33,3 +33,4 @@ dev. Pavel Ugrynovych (Lauer - lauer.com.ua)
 @import "style/portfolio/portfolio";
 @import "style/contacts/contacts";
 @import "style/faq/faq";
+@import "style/404";
